# voxture

./: CMakeLists.txt  README.md
models/: cube.ply
mytest/: aba.blend  aba.blend1  voxels.txt
resources/: config.txt
resources/mytest/: aba.blend
resources/saharov/: list.txt
resources/saharov_sample/: cameras.out  list.txt
resources/shaders/: dag_compColors.frag.glsl  dag_rawColors.frag.glsl  default.fs.glsl  image.frag.glsl  image.vert.glsl  model.frag.glsl  model.vert.glsl  modelCompact.frag.glsl  point.frag.glsl  test.comp.glsl  test.frag.glsl  texmodel.frag.glsl  texmodel.vert.glsl  voxel.frag.glsl  voxel.vert.glsl
resources/testBundle/: cameras.out
resources/textures/: 1.dds  test_texture.dds  test_texture.xcf
src/: Logger.cpp  Logger.h  builder.cpp  main.cpp  renderer.cpp  renderer.h  triangle.cpp  viewer.cpp  voxelizer.cpp  voxelizer.h
src/builder/: CompactOctreeBuilder.hpp  DiskTree.hpp  FullTreeBuilder.hpp  PartialTreeBuilder.hpp
src/bundle/: Bundle.hpp  BundleCamera.hpp  PhotoInfo.hpp  camera.hpp
src/common/: Image.hpp  constants.hpp  image.hpp
src/data/: CompactOctree.hpp  DDSImage.hpp  Image.hpp  RawOctree.hpp
src/geom/: Camera.hpp  Frustum.hpp  Triangle.hpp  camera.hpp  intersect.hpp  normalizer.hpp  triangle.cpp  triangle.h  triangle.hpp  voxelizer.cpp  voxelizer.h  voxelizer.hpp
src/init-external/: stb_image.cpp  tiny_obj_loader.cpp
src/outofcore/: App.hpp  CompactTree.hpp  DBH.hpp  DiskTreeBuilder.hpp  LocalRes.hpp  Main.hpp  Model.hpp  ModelViewer.hpp  Octree.hpp  Timer.hpp  TreeBuilder.hpp  TreeBuilderRays.hpp
src/projector/: ProjectorTest.hpp
src/renderer/: DebugDraw.hpp  GLFWContext.hpp  Model.hpp  ModelViewer.hpp  ModelViewerOctree.hpp  ModelViewerUV.hpp  OrbitCameraController.hpp  RenderCamera.hpp  Renderer.hpp  Resources.hpp  ShaderProgram.hpp  SimpleRenderer.hpp  Texture.hpp  VoxelGrid.hpp  camera.h  camera.hpp  cube.h  cube.hpp  glfwContext.h  glfwContext.hpp  mygl.h  renderCamera.hpp  renderer.h  renderer.hpp  rendererRaylib.cpp  rendererRaylib.h  resources.h  resources.hpp  shaderProgram.h  voxelGrid.hpp
src/test/: Benchmark.hpp  myplots.py  test.cpp
src/test/results/: compression.txt  octree_citywall_results.csv  octree_saharov_results.csv  uv_citywall_results.csv  uv_saharov_results.csv
src/util/: Config.hpp  DiskIO.hpp  Logger.cpp  Logger.h  Logger.hpp  Status.cpp  Status.h  Status.hpp  ply_util.hpp  saharov.hpp  tiny_obj_loader.cpp
test/: mergeTime.txt
